// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders HomeScreen correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    Home!
  </Text>
</View>
`;

exports[`renders ParentScreen correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    Parents!
  </Text>
</View>
`;

exports[`renders RewardsScreen correctly 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    Home!
  </Text>
</View>
`;
